[package]
name = "mini_asset_loader"
version = "0.1.0"
edition = "2021"
description = "A composable game asset-loading system."
authors = ["Ethan McTague"]
repository = "https://github.com/emctague/mini_asset_loader"
homepage = "https://github.com/emctague/mini_asset_loader"
license = "MIT"
keywords = ["gamedev", "json", "serde"]
categories = ["game-development"]


[dependencies]
any_handle = "0.1"
zip = { version = "0.6", optional = true }
typetag = { version = "0.2", optional = true }
serde = { version = "1.0", optional = true }
serde_json = { version = "1.0", optional = true }

[build-dependencies]
rustc_version = "0.4"

[features]
zip = ["dep:zip"]
asset = ["dep:serde", "dep:serde_json", "dep:typetag"]
